# LEARN-SKLEARN

./: README.md  main.py  pyproject.toml
Credit Card Fraud Detection/: eda.ipynb  main_final.ipynb
Foundational/: 01_hello_sklearn.ipynb  02_Basic_preprocessing.ipynb  03_First_supervised_learning_models.ipynb  04_Model_Evaluation_Fundamentals.ipynb  05_Essential Tree-BasedModels.ipynb  06_Pipelines.ipynb  07_Cross_Val__and__Hyperparameters.ipynb  08_Handling-Real-World-Data_issues.ipynb  hello_sklearn.ipynb
